--- a/assets/sass/main.scss
+++ b/assets/sass/main.scss
@@ -880,6 +880,13 @@
 
 		/* Header */
 
+			#close {
+				position: absolute;
+				right: 0;
+				padding: 0.8rem;
+				cursor: pointer;
+			}
+
 			#header {
 				@include vendor('backface-visibility', 'hidden');
 				@include vendor('transition', ('transform #{_duration(header)} ease'));
