--- a/assets/sass/main.scss
+++ b/assets/sass/main.scss
@@ -687,6 +687,16 @@
 		}
 	}
 
+/* Contact List*/
+
+ .contact-list {
+	list-style-type: none;
+
+	 span {
+		 margin-left: 1em;
+	 }
+ }
+
 /* Wrapper */
 
 	#wrapper {
